--- a/Resources/particle_texture_explosion.plist
+++ b/Resources/particle_texture_explosion.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>angle</key>
-	<real>90</real>
+	<real>92</real>
 	<key>angleVariance</key>
-	<real>50</real>
+	<real>180</real>
 	<key>blendFuncDestination</key>
 	<integer>1</integer>
 	<key>blendFuncSource</key>
@@ -31,15 +31,15 @@
 	<key>finishColorVarianceRed</key>
 	<real>0</real>
 	<key>finishParticleSize</key>
-	<real>23</real>
+	<real>-1</real>
 	<key>finishParticleSizeVariance</key>
 	<real>0</real>
 	<key>gravityx</key>
-	<real>20</real>
+	<real>-20</real>
 	<key>gravityy</key>
-	<real>580</real>
+	<real>420</real>
 	<key>maxParticles</key>
-	<real>14</real>
+	<real>232</real>
 	<key>maxRadius</key>
 	<real>0</real>
 	<key>maxRadiusVariance</key>
@@ -47,9 +47,9 @@
 	<key>minRadius</key>
 	<real>0</real>
 	<key>particleLifespan</key>
-	<real>0.05</real>
+	<real>0.49</real>
 	<key>particleLifespanVariance</key>
-	<real>0.4</real>
+	<real>0.1</real>
 	<key>radialAccelVariance</key>
 	<real>0</real>
 	<key>radialAcceleration</key>
@@ -63,47 +63,47 @@
 	<key>rotationEndVariance</key>
 	<real>0</real>
 	<key>rotationStart</key>
-	<real>240</real>
+	<real>0</real>
 	<key>rotationStartVariance</key>
 	<real>0</real>
 	<key>sourcePositionVariancex</key>
-	<integer>30</integer>
+	<real>0</real>
 	<key>sourcePositionVariancey</key>
-	<integer>20</integer>
+	<real>0</real>
 	<key>sourcePositionx</key>
-	<real>299.294117647059</real>
+	<real>301.3756613756614</real>
 	<key>sourcePositiony</key>
-	<real>316.2352941176471</real>
+	<real>432.5925925925926</real>
 	<key>speed</key>
-	<real>380</real>
+	<real>320</real>
 	<key>speedVariance</key>
-	<real>5</real>
+	<real>20</real>
 	<key>startColorAlpha</key>
-	<real>1</real>
+	<real>0.2</real>
 	<key>startColorBlue</key>
-	<real>0.6</real>
+	<real>0.1</real>
 	<key>startColorGreen</key>
-	<integer>1</integer>
+	<real>0.3</real>
 	<key>startColorRed</key>
 	<integer>1</integer>
 	<key>startColorVarianceAlpha</key>
-	<real>0.1</real>
+	<integer>0</integer>
 	<key>startColorVarianceBlue</key>
-	<real>0.2</real>
+	<real>0</real>
 	<key>startColorVarianceGreen</key>
-	<integer>0</integer>
+	<real>0</real>
 	<key>startColorVarianceRed</key>
-	<integer>0</integer>
+	<real>0</real>
 	<key>startParticleSize</key>
-	<integer>16</integer>
+	<real>100</real>
 	<key>startParticleSizeVariance</key>
-	<integer>10</integer>
+	<real>10</real>
 	<key>tangentialAccelVariance</key>
 	<real>0</real>
 	<key>tangentialAcceleration</key>
-	<real>0</real>
+	<real>-700</real>
 	<key>textureFileName</key>
-	<string>particle_texture.png</string>
+	<string>particle_texture_explosion.png</string>
 	<key>textureImageData</key>
 	<string></string>
 </dict>
